--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -14,14 +14,11 @@ jobs:
     name: Build & Deploy
     steps:
       - uses: actions/checkout@v4
-      - name: Publish
+      - name: Production
         uses: cloudflare/wrangler-action@v3
-        env:
-          CUSTOM_DOMAIN: ${{ secrets.CUSTOM_DOMAIN || 'libcuda.so' }}
         with:
           apiToken: ${{ secrets.CF_API_TOKEN }}
           accountId: ${{secrets.CF_ACCOUNT_ID}}
-          vars:
-            CUSTOM_DOMAIN
           command: deploy --env production --minify src/index.js
           environment: production
+  
